<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:minWidth="300dp">

        <TextView
            android:id="@+id/textViewDPadSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:text="@string/dPadSize"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <SeekBar
            android:id="@+id/seekBarDPadSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <TextView
            android:id="@+id/textViewDPadPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:text="@string/dPadPosition"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBarDPadPosition1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <SeekBar
            android:id="@+id/seekBarDPadPosition2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />
        
        <TextView
            android:id="@+id/textViewButtonSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:text="@string/buttonSize"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <SeekBar
            android:id="@+id/seekBarButtonSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />
        
        <TextView
            android:id="@+id/textViewButtonPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:text="@string/buttonPosition"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <SeekBar
            android:id="@+id/seekBarButtonPosition1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <SeekBar
            android:id="@+id/seekBarButtonPosition2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <TextView
            android:id="@+id/textViewDPadType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:text="@string/dPadType"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/radioGrpDPadType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonDPadFloating"
                android:layout_margin="6dp"
                android:text="@string/floating" />

            <RadioButton
                android:id="@+id/radioButtonDPadFixed"
                android:layout_margin="6dp"
                android:text="@string/fixed" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonConfigureHardwareButtons"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/configHardwareButtons"
            android:minWidth="200dp" />
        
        </LinearLayout>
        
</ScrollView>
